--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,12 +1,12 @@
-<div class="content">
+<div class="content" style="opacity: 0.75;">
     <div class="col-md-12">
         <div class="card">
-            <div class="card-header">
+            <div class="card-header" >
                 <h5>Sign In</h5>
             </div>
 
-            <div class="card-body">
-                <form [formGroup]="loginForm" (ngSubmit)="login()">
+            <div class="card-body" >
+                <form [formGroup]="loginForm" (ngSubmit)="login()" >
                         <div class="mb-3">
                             <label  for="email">E-mail</label>
                             <div class="form-group">
@@ -20,10 +20,10 @@
                                 </div></div>
                 </form>
             </div>     
-            <div class="mb-3">
+            <div class="mb-3" style="  text-align:center;">
                 <label for="colorAdd"></label>
                 <div class="form-group">
-                    <button  (click)="login()"  class="btn btn-success">Sign In</button>
+                    <button  (click)="login()"  class="btn btn-info">Sign In</button>
                 </div></div>
         </div>
     </div>
