--- a/src/app/components/color-add/color-add.component.html
+++ b/src/app/components/color-add/color-add.component.html
@@ -1,4 +1,4 @@
-<div>
+<div style="opacity:0.75 ;background-color: white;">
     <table id="colorsTable" class="table table-hover table-striped mt-4 border">
         <thead>
         <tr>
