--- a/src/app/components/customer-rental/customer-rental.component.html
+++ b/src/app/components/customer-rental/customer-rental.component.html
@@ -1,4 +1,4 @@
-<table class="table table-hover table-striped mt-4 border">
+<table class="table table-hover table-striped mt-4 border" style="background-color: white;opacity: 0.75;">
     <thead>
         <th><tr>Car Brand </tr></th>
         
