--- a/src/app/components/customer/customer.component.html
+++ b/src/app/components/customer/customer.component.html
@@ -1,4 +1,4 @@
-<table class="table">
+<table class="table" style="background-color: white; opacity: 0.75;">
 
     <thead>
         <tr>
@@ -17,7 +17,7 @@
 </table>
 
 
-<table class="table">
+<table class="table"  style="background-color: white; opacity: 0.75;">
 
     <thead>
         <tr>
