--- a/src/app/components/rental-detail/rental-detail.component.html
+++ b/src/app/components/rental-detail/rental-detail.component.html
@@ -1,4 +1,4 @@
-<table class="table">
+<table class="table" style="background-color: white; opacity: 0.75;">
     <thead>
         <tr>
             <th>Brand Name</th>
