--- a/src/app/components/car/car.component.html
+++ b/src/app/components/car/car.component.html
@@ -2,7 +2,7 @@
   <span class="visually-hidden">Loading...</span>
 </div>
 <div class="mb-3">
-  <label for="filterText" class="form-label" style="color:#E4D3C2;">Search Car</label>
+  <label for="filterText" class="form-label" style="color:rgb(19, 78, 102);">Search Car</label>
   <input type="text" [(ngModel)]="filterText" class="form-control" id="filterText" placeholder="Search Car">
 </div>
 <div *ngIf="filterText" class="alert alert-success">
