--- a/src/app/components/color-details/color-details.component.html
+++ b/src/app/components/color-details/color-details.component.html
@@ -1,5 +1,5 @@
-<div class="row mt-4">
-  <div class="col-lg-9">
+<div class="row mt-4" style ="opacity: 0.75;">
+  <div class="col-lg-9" style="background-color: white;">
 
     <div class="card">
       <div class="card-header fw-bold">
